syntax = "proto3";

package exchange;

option go_package = "./";

// Определение сервиса
service ExchangeService {
    // Получение курсов обмена всех валют
    rpc GetExchangeRates(Empty) returns (RatesResponse);
    
    // Получение курса обмена для конкретной валюты
    rpc GetExchangeCurrency(CurrencyRequest) returns (CurrencyResponse);
}

// Запрос для получения курса обмена для конкретной валюты
message CurrencyRequest {
    string from_currency = 1;
    string to_currency = 2;
}

// Ответ с курсом обмена для конкретной валюты
message CurrencyResponse {
    string from_currency = 1;
    string to_currency = 2;
    double rate = 3;
}

// Ответ с курсами обмена всех валют
message RatesResponse {
    map<string, double> rates = 1; // ключ: валюта, значение: курс
}

// Пустое сообщение
message Empty {}